<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_back_small">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/round_corner_1"
        android:text="@string/main_fragment_top_textview_title"
        android:gravity="center"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/metal_regular"
        android:textSize="60sp"
        android:padding="5dp"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_2"
        android:text="@string/main_fragment_second_textview_title"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/overpass_medium_italic"
        android:gravity="center"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/privacy_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_corner_3"
        android:gravity="center"
        android:paddingVertical="25dp"
        android:text="@string/privacy_text_view_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        />


    <android.widget.Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_4"
        android:gravity="center"
        android:text="@string/ok_text"
        android:fontFamily="@font/poppins_medium_italic"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/privacy_link"
        tools:layout_editor_absoluteX="20dp" />

    <android.widget.Button
        android:id="@+id/button_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_2"
        android:gravity="center"
        android:text="@string/later_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium_italic"
        android:textSize="30sp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/button_ok"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>