<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_back_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/round_corner_1"
        android:text="@string/main_fragment_top_textview_title"
        android:gravity="center"
        android:textColor="@color/dark_green"
        android:textSize="60sp"
        android:padding="5dp"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:fontFamily="@font/metal_regular" />

    <TextView
        android:id="@+id/display_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_2"
        android:text="00:00:00"
        android:fontFamily="@font/abhaya_libre_extra_bold"
        android:textColor="@color/dark_green"
        android:gravity="center"
        android:textSize="45sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="0dp" />


    <android.widget.Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_3"
        android:gravity="center"
        android:text="@string/start"
        android:fontFamily="@font/poppins_medium_italic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:paddingVertical="5dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        tools:layout_editor_absoluteX="20dp" />

    <android.widget.Button
        android:id="@+id/button_pause_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_3"
        android:gravity="center"
        android:text="@string/resume_pause"
        android:fontFamily="@font/poppins_medium_italic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:paddingVertical="5dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        tools:layout_editor_absoluteX="20dp" />


    <android.widget.Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/round_corner_2"
        android:gravity="center"
        android:text="@string/save"
        android:fontFamily="@font/poppins_medium_italic"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/button_pause_resume"
        tools:layout_editor_absoluteX="20dp" />


    <android.widget.Button
        android:id="@+id/button_saved_tracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/round_corner_4"
        android:gravity="center"
        android:text="@string/saved_tracks"
        android:fontFamily="@font/poppins_medium_italic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        android:paddingVertical="5dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/button_save"
        tools:layout_editor_absoluteX="31dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>