<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_back_small">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner_1"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/metal_regular"
        android:gravity="center"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/main_fragment_top_textview_title"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />


    <android.widget.Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/round_corner_2"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:singleLine="true"
        android:text="@string/clear"
        android:fontFamily="@font/poppins_medium_italic"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />


    <ListView
        android:id="@+id/saved_tracks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />
    <android.widget.Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_4"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:singleLine="true"
        android:text="@string/back"
        android:fontFamily="@font/poppins_medium_italic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/button_clear"
        tools:layout_editor_absoluteX="31dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>